--- a/.emacs.d/history
+++ b/.emacs.d/history
@@ -6,4 +6,4 @@
 (setq minibuffer-history '("/bin/bash" "wakatime-api-key" "markdown-mode" "wakatime-mode"))
 (setq buffer-name-history '("*GNU Emacs*" "*Messages*" "*scratch*" "trab1-small-step" "*Buffer List*" "SmallStep.hs" "Tipo.hs" "*terminal*" "jonathas.hs" "Tipo.hs" "*terminal*" "SmallStep.hs" "*terminal*" "*Buffer List*" "trab1-small-step" "SemanticaFormal" "Github" "Artigos" "README.md" "*markdown-output*" "*el-get packages*"))
 (setq file-name-history '("/tmp/jonathas.hs" "~/Github/SemanticaFormal/trab1-small-step/Tipo.hs" "~/Github/SemanticaFormal/trab1-small-step/" "~/.emacs.d/init.el" "~/.emacs.d/el-get/" "~/.emacs.d/" "~/.emacs.d/init.el"))
-(setq extended-command-history '("term" "upcase-region" "load-file" "customize-set-variable" "global-wakatime-mode" "markdown-preview" "markdown-mode" "el-get-install" "el-get-list-packages" "load-file" "eval-buffer"))
+(setq extended-command-history '("buffer-menu" "term" "upcase-region" "load-file" "customize-set-variable" "global-wakatime-mode" "markdown-preview" "markdown-mode" "el-get-install" "el-get-list-packages" "load-file" "eval-buffer"))
