--- a/.emacs.d/history
+++ b/.emacs.d/history
@@ -3,7 +3,7 @@
 
 (setq savehist-minibuffer-history-variables '(query-replace-history minibuffer-history buffer-name-history file-name-history extended-command-history))
 (setq query-replace-history '("stg_ap_v_fast" "a" "Int"))
-(setq minibuffer-history '("go-mode" "/bin/bash" "wakatime-api-key" "markdown-mode" "wakatime-mode"))
-(setq buffer-name-history '("kata.go" "init.el" "deriveConstants" "DeriveConstants.hs" "*GNU Emacs*" "*Messages*" "*Buffer List*" "Tipo.hs" "*scratch*" "trab1-small-step" "SmallStep.hs" ".gitignore" "*GNU Emacs*" "*Messages*" "*scratch*" "trab1-small-step" "*Buffer List*" "SmallStep.hs" "Tipo.hs" "*terminal*" "jonathas.hs" "Tipo.hs" "*terminal*" "SmallStep.hs" "*terminal*" "*Buffer List*" "trab1-small-step" "SemanticaFormal" "Github" "Artigos" "README.md" "*markdown-output*" "*el-get packages*"))
-(setq file-name-history '("/tmp/kata.go" "~/Github/PersonalSH/.emacs.d/init.el" "~/.emacs.d/init.el" "~/Workspace/studing-ghc/README.md" "~/Workspace/ghc/" "~/Github/PersonalSH/.gitignore" "/tmp/jonathas.hs" "~/Github/SemanticaFormal/trab1-small-step/Tipo.hs" "~/Github/SemanticaFormal/trab1-small-step/" "~/.emacs.d/init.el" "~/.emacs.d/el-get/" "~/.emacs.d/" "~/.emacs.d/init.el"))
-(setq extended-command-history '("load-file" "el-get-install" "c-mode" "buffer-menu" "term" "upcase-region" "load-file" "customize-set-variable" "global-wakatime-mode" "markdown-preview" "markdown-mode" "el-get-install" "el-get-list-packages" "load-file" "eval-buffer"))
+(setq minibuffer-history '("/bin/bash" "wakatime-api-key" "markdown-mode" "wakatime-mode"))
+(setq buffer-name-history '("*Completions*" "*GNU Emacs*" "*Messages*" "*scratch*" "rts" "STM.c" "README.md" "stm" "libraries" "utils" "ghc" "includes" "rts<includes>" "storage" "Closures.h" "*Buffer List*" "PrimOps.cmm" "MainT.hs" "deriveConstants" "DeriveConstants.hs" "*GNU Emacs*" "*Messages*" "*Buffer List*" "Tipo.hs" "*scratch*" "trab1-small-step" "SmallStep.hs" ".gitignore" "*GNU Emacs*" "*Messages*" "*scratch*" "trab1-small-step" "*Buffer List*" "SmallStep.hs" "Tipo.hs" "*terminal*" "jonathas.hs" "Tipo.hs" "*terminal*" "SmallStep.hs" "*terminal*" "*Buffer List*" "trab1-small-step" "SemanticaFormal" "Github" "Artigos" "README.md" "*markdown-output*" "*el-get packages*"))
+(setq file-name-history '("~/Workspace/studing-ghc/testCases/FixedTests/UniqueID/MainT.hs" "~/Workspace/studing-ghc/README.md" "~/Workspace/ghc/" "~/Github/PersonalSH/.gitignore" "/tmp/jonathas.hs" "~/Github/SemanticaFormal/trab1-small-step/Tipo.hs" "~/Github/SemanticaFormal/trab1-small-step/" "~/.emacs.d/init.el" "~/.emacs.d/el-get/" "~/.emacs.d/" "~/.emacs.d/init.el"))
+(setq extended-command-history '("c-mode" "buffer-menu" "term" "upcase-region" "load-file" "customize-set-variable" "global-wakatime-mode" "markdown-preview" "markdown-mode" "el-get-install" "el-get-list-packages" "load-file" "eval-buffer"))
