--- a/.emacs.d/history
+++ b/.emacs.d/history
@@ -5,8 +5,8 @@
 (setq magit-read-file-hist '(".emacs.d/init.el"))
 (setq magit-revision-history '("master"))
 (setq yes-or-no-p-history '("yes"))
-(setq query-replace-history '("VOID" "INT" "BOOL" "INT" "BOOL" "INT" "E" "Error" "S" "Success" "isFinal" "isFinal[A,B,C]" "Exp" "[A,B,C]Exp" "Exp" "{A, B, C}Exp" "Exp" ".Exp" "stg_ap_v_fast" "a" "Int"))
-(setq minibuffer-history '("git-gutter" "magit" "powerline" "auto-complete" "/bin/bash" "wakatime-api-key" "markdown-mode" "wakatime-mode"))
+(setq query-replace-history '("Num" "VOID" "INT" "BOOL" "INT" "BOOL" "INT" "E" "Error" "S" "Success" "isFinal" "isFinal[A,B,C]" "Exp" "[A,B,C]Exp" "Exp" "{A, B, C}Exp" "Exp" ".Exp" "stg_ap_v_fast" "a" "Int"))
+(setq minibuffer-history '("express.aoD" "express.o" "git-gutter" "magit" "powerline" "auto-complete" "/bin/bash" "wakatime-api-key" "markdown-mode" "wakatime-mode"))
 (setq buffer-name-history '(".gitignore" ".loaddefs.el" "*scratch*" "SemanticaFormal" "*GNU Emacs*" "*Completions*" "*GNU Emacs*" "*Messages*" "*scratch*" "rts" "STM.c" "README.md" "stm" "libraries" "utils" "ghc" "includes" "rts<includes>" "storage" "Closures.h" "*Buffer List*" "PrimOps.cmm" "MainT.hs" "deriveConstants" "DeriveConstants.hs" "*GNU Emacs*" "*Messages*" "*Buffer List*" "Tipo.hs" "*scratch*" "trab1-small-step" "SmallStep.hs" ".gitignore" "*GNU Emacs*" "*Messages*" "*scratch*" "trab1-small-step" "*Buffer List*" "SmallStep.hs" "Tipo.hs" "*terminal*" "jonathas.hs" "Tipo.hs" "*terminal*" "SmallStep.hs" "*terminal*" "*Buffer List*" "trab1-small-step" "SemanticaFormal" "Github" "Artigos" "README.md" "*markdown-output*" "*el-get packages*"))
 (setq file-name-history '("~/Github/PersonalSH/.gitignore" "~/Github/PersonalSH/.emacs.d/" "~/Github/PersonalSH/.emacs.d/init.el" "/tmp/entrada.txt" "~/Workspace/studing-ghc/testCases/FixedTests/UniqueID/MainT.hs" "~/Workspace/studing-ghc/README.md" "~/Workspace/ghc/" "~/Github/PersonalSH/.gitignore" "/tmp/jonathas.hs" "~/Github/SemanticaFormal/trab1-small-step/Tipo.hs" "~/Github/SemanticaFormal/trab1-small-step/" "~/.emacs.d/init.el" "~/.emacs.d/el-get/" "~/.emacs.d/" "~/.emacs.d/init.el"))
-(setq extended-command-history '("git-gutter:revert-hunk" "end-of-buffer" "global-git-gutter-mode" "el-get-install" "el-get-remove" "load-file" "end-of-buffer" "load-file" "magit-file-checkout" "global-whitespace-mode" "magit-file-checkout" "magit-status" "global-whitespace-mode" "magit-status" "magit-version" "el-get-install" "powerline-default-theme" "powerline-nano-theme" "powerline-vim-theme" "powerline-center-evil-theme" "powerline-default-theme" "powerline-center-theme" "powerline-default-theme" "el-get-install" "load-file" "el-get-install" "end-of-buffer" "revert-buffer" "replace-regexp" "revert-buffer" "c-mode" "buffer-menu" "term" "upcase-region" "load-file" "customize-set-variable" "global-wakatime-mode" "markdown-preview" "markdown-mode" "el-get-install" "el-get-list-packages" "load-file" "eval-buffer"))
+(setq extended-command-history '("search-backward-regexp" "search-forward-regexp" "top-level" "end-of-buffer" "git-gutter-mode" "git-gutter:revert-hunk" "end-of-buffer" "global-git-gutter-mode" "el-get-install" "el-get-remove" "load-file" "end-of-buffer" "load-file" "magit-file-checkout" "global-whitespace-mode" "magit-file-checkout" "magit-status" "global-whitespace-mode" "magit-status" "magit-version" "el-get-install" "powerline-default-theme" "powerline-nano-theme" "powerline-vim-theme" "powerline-center-evil-theme" "powerline-default-theme" "powerline-center-theme" "powerline-default-theme" "el-get-install" "load-file" "el-get-install" "end-of-buffer" "revert-buffer" "replace-regexp" "revert-buffer" "c-mode" "buffer-menu" "term" "upcase-region" "load-file" "customize-set-variable" "global-wakatime-mode" "markdown-preview" "markdown-mode" "el-get-install" "el-get-list-packages" "load-file" "eval-buffer"))
